# rm_auto_aim

./: CMakeLists.txt
include/: armor.hpp  detector.hpp  detector_node.hpp  pnp_solver.hpp
src/: detector.cpp  detector_node.cpp  number_classifier.cpp  pnp_solver.cpp
